--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fastapi
-uvicorn
-requests
-python-dotenv
-transformers
-torch
-summa
+fastapi==0.115.11
+uvicorn==0.34.0
+transformers==4.49.0
+torch==2.6.0
+requests==2.32.3
+python-dotenv==1.0.1
